syntax = "proto3";

option java_multiple_files = true;
option java_package = "pathfinder.data.local";

package local;

message FeatData {
  string id = 1;
  string name = 2;
  string type = 3;
  string description = 4;
  string prerequisites = 5;
  string benefit = 6;
  string normal = 7;
  string special = 8;
  string source = 9;
  bool teamwork = 10;
  bool critical = 11;
  bool grit = 12;
  bool style = 13;
  bool performance = 14;
  bool racial = 15;
  bool companion = 16;
  string notes = 17;
  string goal = 18;
  bool multiple = 19;
  string prerequisite_feats = 20;
  string race_name = 21;
  string completion_benefit = 22;
  string suggested_traits = 23;
}