syntax = "proto3";

option java_multiple_files = true;
option java_package = "pathfinder.data.v2";

import "v2/CharacterChoice.proto";
import "v2/AbilityDatabase.proto";

package v2;

message CharacterEffectDbo {

  message ModifyFeatureEffect {
    string feature_id = 1;
    int32 delta = 2;
  }

  message SetFeatureEffect {
    string feature_id = 1;
    int32 value = 2;
  }

  message GrantChoiceEffect {
    CharacterChoiceDbo choice = 1;
  }

  message GrantAbilityEffect {
    string ability_id = 1;
  }

  message GrantFeatEffect {
    string feat_id = 1;
  }

  message AddChoiceOptionsEffect {
    string choice_type = 1;
    string database_id = 2;
    repeated string option_ids = 3;
  }

  uint32 level = 1;

  oneof effect {
    ModifyFeatureEffect modify_feature = 100;
    SetFeatureEffect set_feature = 101;
    GrantChoiceEffect grant_choice = 102;
    GrantAbilityEffect grant_ability = 103;
    GrantFeatEffect grant_feat = 104;
    AddChoiceOptionsEffect add_choice_options = 105;
  }
}